- add support for reading GIFTI format labels
- add support for reading GIFTI format annotations
- add support for writing GIFTI format labels
- add support for writing GIFTI format annotations
- export rotate2D and flip2D to namespace
- add support for reading transformation matrices from xfm files: read.fs.transform


Version 0.1.10
--------------
- read.fs.label improvement: do not increment indices for volume labels, better print support for them
- support exporting surface meshes in Stanford triangle format (.ply)
- support reading surface meshes in Stanford triangle format (.ply)
- support exporting surface meshes in Wavefront object format (.obj)
- support exporting surface meshes in Object File Format (.off)
- support reading surface meshes in PLY format, including Blender exports with vertex colors and normals
- add general GIFTI writer (requires xml2)
- add support for writing surfaces in GIFTI format
- add read.fs.volume() function that support MGH, MGZ and NIFTI formats
- add experimental support for reading NIFTI volumes as fs.volume instances (via oro.nifti package), including header computation


Version 0.1.9
-------------
- Add support for reading brain surface meshes in VTK ASCII file format
- Add support for writing brain surface meshes in VTK ASCII file format
- Add 'format' parameter to write.fs.surface, the function can now derive the format from the filename like similar functions
- Add support for reading morph data from text files with one numeric value per line (.txt format)
- Minor improvements to the vignette


Version 0.1.8
-------------
- Add support for reading surfaces in FreeSurfer ASCII surface format (integrated into read.fs.surface)
- Add high-level functions 'read_nisurface' and 'read_nisurfacefile' to read surface files in different formats
- Add support for writing surfaces in FreeSurfer ASCII surface format: 'write.fs.surface.asc'