@@ -11,15 +11,15 @@ S3method(read_nisurfacefile,fsnative)
 S3method(read_nisurfacefile,gifti)
 export(cdata)
 export(colortable.from.annot)
-export(delete_all_optional_data)
-export(download_optional_data)
+export(delete_all_opt_data)
+export(download_opt_data)
 export(faces.quad.to.tris)
 export(flip2D)
 export(flip3D)
 export(fs.get.morph.file.ext.for.format)
 export(fs.get.morph.file.format.from.filename)
 export(fs.patch)
-export(get_optional_data_filepath)
+export(get_opt_data_filepath)
 export(gifti_writer)
 export(gifti_xml)
 export(gifti_xml_add_global_metadata)
@@ -29,7 +29,7 @@ export(is.fs.annot)
 export(is.fs.label)
 export(is.fs.surface)
 export(is.fs.volume)
-export(list_optional_data)
+export(list_opt_data)
 export(mghheader.centervoxelRAS.from.firstvoxelRAS)
 export(mghheader.crs.orientation)
 export(mghheader.is.conformed)
