@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/optdata.R
-\name{download_optional_data}
-\alias{download_optional_data}
+\name{download_opt_data}
+\alias{download_opt_data}
 \title{Download optional data for the freesurferformats package.}
 \usage{
-download_optional_data()
+download_opt_data()
 }
 \value{
 Named list. The list has entries: "available": vector of strings. The names of the files that are available in the local file cache. You can access them using get_optional_data_file(). "missing": vector of strings. The names of the files that this function was unable to retrieve.
