@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/optdata.R
-\name{get_optional_data_filepath}
-\alias{get_optional_data_filepath}
+\name{get_opt_data_filepath}
+\alias{get_opt_data_filepath}
 \title{Access a single file from the package cache by its file name.}
 \usage{
-get_optional_data_filepath(filename, mustWork = TRUE)
+get_opt_data_filepath(filename, mustWork = TRUE)
 }
 \arguments{
 \item{filename, }{string. The filename of the file in the package cache.}
