@@ -1,10 +1,10 @@
 % Generated by roxygen2: do not edit by hand
 % Please edit documentation in R/optdata.R
-\name{list_optional_data}
-\alias{list_optional_data}
+\name{list_opt_data}
+\alias{list_opt_data}
 \title{Get file names available in package cache.}
 \usage{
-list_optional_data()
+list_opt_data()
 }
 \value{
 vector of strings. The file names available, relative to the package cache.
