@@ -39,8 +39,8 @@ test_that("One can read, write and re-read triangular surface data", {
 
   skip_if(tests_running_on_cran_under_macos(), message = "Skipping on CRAN under MacOS, required test data cannot be downloaded.");
 
-  freesurferformats::download_optional_data();
-  subjects_dir = freesurferformats::get_optional_data_filepath("subjects_dir");
+  freesurferformats::download_opt_data();
+  subjects_dir = freesurferformats::get_opt_data_filepath("subjects_dir");
   surface_file = file.path(subjects_dir, "subject1", "surf", "lh.white");
 
   skip_if_not(file.exists(surface_file), message="Test data missing.");
